# crud_without_db

./: Cargo.toml  db.json
src/: main.rs
src/db/: db_service.rs  mod.rs
src/model/: mod.rs  model.rs
